updated copyright notice