@@ -1,5 +1,22 @@
 package synapticloop.templar.function.math;
 
+/*
+ * Copyright (c) 2012-2019 synapticloop.
+ * All rights reserved.
+ *
+ * This source code and any derived binaries are covered by the terms and
+ * conditions of the Licence agreement ("the Licence").  You may not use this
+ * source code or any derived binaries except in compliance with the Licence.
+ * A copy of the Licence is available in the file named LICENCE shipped with
+ * this source code or binaries.
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the Licence is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
+ * Licence for the specific language governing permissions and limitations
+ * under the Licence.
+ */
+
 import synapticloop.templar.exception.FunctionException;
 import synapticloop.templar.function.Function;
 
@@ -25,13 +42,13 @@ public abstract class BaseMathFunction extends Function {
 	protected Number getNumber(String numberString) throws FunctionException {
 		if(numberString.contains(".")) {
 			try {
-				return(new Double(numberString));
+				return(Double.valueOf(numberString));
 			} catch (NumberFormatException nfex) {
 				throw new FunctionException("Could not coerce '" + numberString + "' to a number.");
 			}
 		} else {
 			try {
-				return(new Long(numberString));
+				return(Long.valueOf(numberString));
 			} catch (NumberFormatException nfex) {
 				throw new FunctionException("Could not coerce '" + numberString + "' to a number.");
 			}
